<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="juanpina.mi_app2.Principal"
    android:background="@drawable/fondo_degradado">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="223dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_1"
        android:contentDescription="@string/todo" />

    <Spinner
        android:id="@+id/spinnercontacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="136dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/enviar_mensaje"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="134dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/seleccionar_mensaje"
        android:textColor="#80DEEA"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler1"
        android:layout_width="300dp"
        android:layout_height="233dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnercontacto"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="134dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/seleccionar_contacto"
        android:textColor="#BBDEFB"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnercontacto" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/enviar"
        android:textColor="#006064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler1"
        tools:ignore="TextContrastCheck" />

    <FrameLayout
        android:id="@+id/framelayout"
        xmlns:mapbox="http://schemas.android.com/apk/res-auto"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btnEnviar"
        tools:context=".examples.basics.SimpleMapViewActivity"
        tools:ignore="MissingConstraints">

        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/enviar_ubicacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/framelayout" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>